@@ -1,3 +1,9 @@
+2008-07-09  Zoltan Varga  <vargaz@gmail.com>
+
+	* mono-codeman.c (mono_code_manager_set_read_only): New helper function to
+	set the code manager to read-only status.
+	(mono_code_manager_reserve_align): Assert if the code manager is read only.
+
 2008-06-14  Zoltan Varga  <vargaz@gmail.com>
 
 	* mono-codeman.c (new_codechunk): Allocate memory for dynamic code managers
